--- a/css/style.scss
+++ b/css/style.scss
@@ -7,8 +7,19 @@ body {
    font-size: 1rem;
 }
 
-.hidden {
-   display: none;
+table {
+   width: 60%;
+   margin: 2rem;
+   max-width: 90%;
+   border: 1px solid #000;
+   border-collapse: separate;
+}
+
+tr,
+th,
+td {
+   border: 0.5px solid #000;
+   padding: 0.5rem;
 }
 
 .navbar {
@@ -49,7 +60,7 @@ body {
       border-style: solid;
       border-color: rgba(255, 255, 255, 0.1);
       border-radius: 0.375rem;
-      transition: background-color 2s ease-in-out;
+      // transition: background-color 2s ease-in-out;
       cursor: pointer;
    }
    &__toogler-icon {
@@ -92,10 +103,13 @@ body {
       border: 0;
       color: rgba(255, 255, 255, 0.55);
    }
-}
-
-.active {
-   color: #fff;
+   &__element-active {
+      display: inline-block;
+      padding: 0.5rem 1.5rem;
+      background: 0 0;
+      border: 0;
+      color: #fff;
+   }
 }
 
 .main {
@@ -118,7 +132,6 @@ body {
       margin-left: auto;
       margin-right: auto;
       flex: 0 0 auto;
-
       justify-content: center;
    }
    &__image {
@@ -126,6 +139,7 @@ body {
       box-shadow: 0 0 10px rgba(26, 9, 9, 0.4);
       padding: 0.6em;
       margin-bottom: 1em;
+      max-width: 80%;
    }
    &__title {
       font-weight: 300;
@@ -184,6 +198,66 @@ body {
    }
 }
 
+.planner {
+   display: flex;
+   flex-wrap: wrap;
+   text-align: center;
+   justify-content: center;
+   margin: 3rem auto;
+   width: 100%;
+   padding: 0 0.75rem;
+   margin-top: 3rem;
+   margin-bottom: 3rem;
+
+   &__day-title {
+      text-transform: uppercase;
+      text-align: center;
+      font-size: 2rem;
+   }
+
+   &__table-done {
+      width: 2rem;
+   }
+
+   &__table-pos {
+      width: 1rem;
+   }
+   &__table-timer-block {
+      width: 2rem;
+   }
+
+   &__table-timer {
+      text-align: center;
+      font-size: 2rem;
+      max-width: 100%;
+      background-color: transparent;
+   }
+
+   &__table-content {
+      background-color: transparent;
+      height: 4rem;
+      max-height: 100%;
+      width: 100%;
+      max-width: 100%;
+      display: flex;
+      vertical-align: text-bottom;
+      text-align: center;
+      word-break: break-all;
+      white-space: pre-wrap;
+      box-sizing: border-box;
+      overflow-wrap: break-word;
+      resize: none;
+   }
+}
+
+.ok-style {
+   background-color: rgb(55, 238, 49);
+}
+
+.hidden {
+   display: none;
+}
+
 @media screen and (min-width: 992px) {
    .navbar__toogler,
    .navbar__show {
@@ -204,7 +278,7 @@ body {
 }
 
 @media screen and (min-width: 576px) {
-   .navbar__container .main {
+   .navbar__container .main .planner {
       max-width: 540px;
    }
    .main__text {
@@ -213,7 +287,7 @@ body {
 }
 
 @media (min-width: 768px) {
-   .navbar__container .main {
+   .navbar__container .main .planner {
       max-width: 720px;
    }
    .main__text {
@@ -222,7 +296,7 @@ body {
 }
 
 @media (min-width: 992px) {
-   .navbar__container .main {
+   .navbar__container .main .planner {
       max-width: 960px;
    }
    .main__text {
@@ -231,7 +305,7 @@ body {
 }
 
 @media (min-width: 1200px) {
-   .navbar__container .main {
+   .navbar__container .main .planner {
       max-width: 1140px;
    }
    .main__text {
@@ -240,7 +314,7 @@ body {
 }
 
 @media (min-width: 1400px) {
-   .navbar__container .main {
+   .navbar__container .main .planner {
       max-width: 1320px;
    }
    .main__text {
