--- a/css/style.scss
+++ b/css/style.scss
@@ -201,7 +201,6 @@ td {
 .planner {
    display: flex;
    flex-wrap: wrap;
-   text-align: center;
    justify-content: center;
    margin: 3rem auto;
    width: 100%;
@@ -209,10 +208,11 @@ td {
    margin-top: 3rem;
    margin-bottom: 3rem;
 
-   &__day-title {
+   &__table-day-title {
       text-transform: uppercase;
       text-align: center;
-      font-size: 2rem;
+      font-size: 1.5rem;
+      width: 100%;
    }
 
    &__table-done {
@@ -228,7 +228,7 @@ td {
 
    &__table-timer {
       text-align: center;
-      font-size: 2rem;
+      font-size: 1rem;
       max-width: 100%;
       background-color: transparent;
    }
@@ -250,6 +250,8 @@ td {
    }
 
    &__table-ok-button {
+      width: 2rem;
+      max-width: 100%;
       background-color: transparent;
    }
 }
